--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,7 @@
 # Create By ifeng
 # Web Site:https://www.hicairo.com
 # Telegram:https://t.me/HiaiFeng
+# 文件修改HASH值
 
 [supervisord]
 nodaemon=true
